--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-dark bg-dark ">
             <div class="container">
                 <a class="navbar-brand logo" href="#">AR JewelFit</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler" id= "startButton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
